--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,6 @@
 <html lang="en">
-    <head>
+<head>
     <title>E test</title>
-        <script src="dist/e.min.js"></script>
 
     <body>
 
@@ -11,8 +10,7 @@
         <button id="btn4">trigger</button>
 
         <div>
-
             <button class="deep">deep</button>
         </div>
 
-        <script src="dist/test.js"></script>
+        <script src="test.min.js"></script>
