--- a/examples/index.html
+++ b/examples/index.html
@@ -12,5 +12,9 @@
         <div>
             <button class="deep">deep</button>
         </div>
+        
+        <h2>Event Bus</h2>
+        <button id="bus-test">trigger event bus</button>
+
 
         <script src="test.min.js"></script>
