Finish the Bus stuff

--- a/examples/index.html
+++ b/examples/index.html
@@ -15,6 +15,7 @@
         
         <h2>Event Bus</h2>
         <button id="bus-test">trigger event bus</button>
+        <button id="bus-off">remove event bus listeners</button>
 
 
         <script src="test.min.js"></script>
