--- a/examples/index.html
+++ b/examples/index.html
@@ -7,10 +7,12 @@
         <button id="btn">yo</button>
         <button id="btn3">yo 3</button>
         <button id="btn2">off</button>
-        <button id="btn4">trigger</button>
 
-        <div>
-            <button class="deep">deep</button>
+        <h2>e.target traversal</h2>
+        <div class="deep">
+            <button>deep</button>
+            <p>It should matter </p>
+            <a href="#">where you click</a>
         </div>
         
         <h2>Event Bus</h2>
