Added mouseenter/leave support by setting delegated events to useCapture

--- a/examples/index.html
+++ b/examples/index.html
@@ -20,4 +20,7 @@
         <button id="bus-off">remove event bus listeners</button>
 
 
+        <div style="background: aquamarine; margin-top: 2rem; width: 50px; height: 50px;" id="mouseover"></div>
+
+
         <script src="test.min.js"></script>
