Improve weakset polyfill

--- a/examples/index.html
+++ b/examples/index.html
@@ -19,6 +19,7 @@
         <button id="bus-test">trigger event bus</button>
         <button id="bus-off">remove event bus listeners</button>
 
+        <a href="#" class="dbl">click</a>
 
         <div style="background: aquamarine; margin-top: 2rem; width: 50px; height: 50px;" id="mouseover"></div>
 
