--- a/examples/index.html
+++ b/examples/index.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>E test</title>
+    <head>
+        <title>E test</title>
 
     <body>
-
         <button id="btn">yo</button>
         <button id="btn3">yo 3</button>
         <button id="btn2">off</button>
@@ -14,7 +14,7 @@
             <p>It should matter </p>
             <a href="#">where you click</a>
         </div>
-        
+
         <h2>Event Bus</h2>
         <button id="bus-test">trigger event bus</button>
         <button id="bus-off">remove event bus listeners</button>
