add non bubbling event support, and multiple event shorthand

--- a/examples/index.html
+++ b/examples/index.html
@@ -21,7 +21,12 @@
 
         <a href="#" class="dbl">click</a>
 
-        <div style="background: aquamarine; margin-top: 2rem; width: 50px; height: 50px;" id="mouseover"></div>
+        <div style="background:pink; width: 100px; height: 100px; position: relative; bottom: -6rem;"></div>
+        <div style="background: aquamarine; margin-top: 2rem; width: 500px; height: 500px;" id="mouseover">
+            <div style="background:red; width: 200px; height: 200px; margin-left: 4rem;"></div>
+        </div>
+
+
 
 
         <script src="test.min.js"></script>
