fix nested for loop misname issue

--- a/examples/index.html
+++ b/examples/index.html
@@ -15,9 +15,17 @@
             <a href="#">where you click</a>
         </div>
 
+        <h2>nodelist tests</h2>
+        <div>
+            <span class="nodelist" style="background:blueviolet; display: inline-block; width: 100px; height: 100px;"></span>
+            <span class="nodelist" style="background:red; display: inline-block; width: 100px; height: 100px;"></span>
+            <span class="nodelist" style="background:gold; display: inline-block; width: 100px; height: 100px;"></span>
+        </div>
+
         <h2>Event Bus</h2>
         <button id="bus-test">trigger event bus</button>
         <button id="bus-off">remove event bus listeners</button>
+
 
         <a href="#" class="dbl">click</a>
 
