--- a/examples/index.html
+++ b/examples/index.html
@@ -7,6 +7,7 @@
         <button id="btn">yo</button>
         <button id="btn3">yo 3</button>
         <button id="btn2">off</button>
+        <button id="btnone">one</button>
 
         <h2>e.target traversal</h2>
         <div class="deep">
