Allow blur/focus to be delegated

--- a/examples/index.html
+++ b/examples/index.html
@@ -36,6 +36,9 @@
         </div>
 
 
+        <a href="#sdsd" class="delegatedblurfocus">delegated blur focus</a>
+        <a href="#sdsd2" class="delegatedblurfocus">delegated blur focus</a>
+
 
 
         <script src="test.min.js"></script>
